--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="c1">
     <h1>5 tasks</h1>
+    </br>
     <h2>1. Military age task</h2>
     <p>
         Please write your age and press submit:
@@ -20,7 +24,8 @@
         </form>
         <button onclick="military(age)">Submit</button>
         <p>Diagnose: <span id="answer"></span></p>
-    <hr>
+</div>
+<div class="c2">
     <h2>2. Calculating</h2>
     <p>Please give 3 numbers: </p>
     <form>
@@ -37,8 +42,8 @@
     </form>
     <button onclick="calculate(first, second, third)">Submit</button>
     <p>Number data: <span id="answer2"></span></p>
-    <hr>
-
+</div>
+<div class="c3">
     <h2>3. Number check task</h2>
     <p>
         Please write a number and press submit:
@@ -51,7 +56,8 @@
         </form>
         <button onclick="checkNum(number)">Submit</button>
         <p>Info of number: <span id="answer3"></span></p>
-    <hr>
+</div>
+<div class="c4">
     <h2>4. Ye good 'ol BMI calculator</h2>
     <p>Please write your hieght and weight and press submit: </p>
     <form>
@@ -64,7 +70,8 @@
     </form>
     <button onclick="bmi(height, weight)">Sub</button>
     <p>Your BMI: <span id="answer4"></span></p>
-    <hr>
+</div>
+<div class="c5">
     <h2>5. Salary calculator</h2>
     <p>Please write your salary per hour and the hours you have worked: </p>
     <form>
@@ -77,7 +84,7 @@
     </form>
     <button onclick="salaryTotal(salary, hours)">Sub</button>
     <p>Your salary: <span id="answer5"></span></p>
-    <hr>
+</div>
         
     <script src="main.js"></script>
 </body>
